<resources>
    <string name="app_name">Sudoku App Solver</string>

    <string name="Sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="log_in_password">Password</string>
    <string name="Login_btn">LOGIN</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="other_sign_in">or sign in with:</string>
    <string name="log_in_error">A aparut o eroare la logare</string>


    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">543667517745261</string>
    <string name="log_out">Log out</string>
    <string name="solve">Solve</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="tag">Tag</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="solve_btn">Solve</string>
    <string name="clear_btn">Clear</string>


</resources>